--- a/termos-e-condicoes/index.html
+++ b/termos-e-condicoes/index.html
@@ -65,8 +65,7 @@
 
     <h2>3. Reservas</h2>
     <ol>
-      <li><strong>Pedido de reserva:</strong> pode ser efetuado através do formulário do site (processado pelo prestador
-        Formspree) ou por contacto direto (email/telefone/WhatsApp). As reservas via plataformas externas
+      <li><strong>Pedido de reserva:</strong> pode ser efetuado através do formulário do site ou por contacto direto (email/telefone/WhatsApp). As reservas via plataformas externas
         regem-se, adicionalmente, pelos termos dessas plataformas.</li>
       <li><strong>Confirmação:</strong> a reserva considera-se confirmada apenas após mensagem expressa de confirmação
         enviada pela Quinta dos Avós Lourenço (email/WhatsApp) com detalhe de datas, nº de hóspedes, preço e
@@ -81,7 +80,7 @@
         impostos legalmente aplicáveis.</li>
       <li><strong>Pagamento:</strong> as condições (sinal, prazos e meios) são comunicadas na confirmação.
         Reservas através de plataformas externas seguem os respetivos métodos de pagamento.</li>
-      <li><strong>Caução:</strong> poderá ser solicitada caução reembolsável para cobrir danos ou incumprimentos,
+      <li><strong>Caução:</strong> poderá ser solicitada caução reembolsável (250€) para cobrir danos ou incumprimentos,
         a qual será devolvida após verificação do estado do alojamento.</li>
     </ol>
 
@@ -100,14 +99,13 @@
 
     <h2>6. Check-in, Check-out e Estadia</h2>
     <ol>
-      <li><strong>Check-in:</strong> entre as <strong>16:00 e 22:00</strong>, salvo combinação prévia.</li>
-      <li><strong>Check-out:</strong> até às <strong>11:00</strong>, salvo combinação prévia.</li>
+      <li><strong>Check-in:</strong> entre as <strong>17:00 e 00:00</strong>, salvo combinação prévia.</li>
+      <li><strong>Check-out:</strong> até às <strong>12:00</strong>, salvo combinação prévia.</li>
       <li><strong>Capacidade:</strong> a ocupação máxima é a indicada na confirmação. A presença de hóspedes adicionais
         requer autorização e poderá implicar custos.</li>
       <li><strong>Identificação:</strong> se aplicável, poderá ser solicitada documentação para cumprimento de obrigações legais
         de registo de hóspedes.</li>
-      <li><strong>Regras de convivência:</strong> silêncio e respeito pelos vizinhos; proibição de festas sem autorização;
-        adequado uso dos equipamentos; proibição de fumar no interior; não são permitidos animais salvo acordo prévio.</li>
+      <li><strong>Regras de convivência:</strong> proibição de festas sem autorização; adequado uso dos equipamentos; proibição de fumar no interior.</li>
       <li><strong>Limpeza e danos:</strong> o alojamento deve ser mantido em bom estado. Danos, extravios ou sujidade anómala
         poderão ser debitados.</li>
     </ol>
@@ -152,12 +150,6 @@
     <p>
       Em caso de insatisfação, contacte-nos para tentarmos resolver de forma célere. Dispomos de
       <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">Livro de Reclamações eletrónico</a>.
-    </p>
-
-    <h2>12. Lei Aplicável e Foro</h2>
-    <p>
-      Os presentes Termos regem-se pela lei portuguesa. Para resolução de litígios emergentes, quando não seja possível
-      acordo, é competente o foro da comarca da Sertã, com renúncia a qualquer outro, sem prejuízo das normas imperativas aplicáveis.
     </p>
 
     <h2>13. Alterações</h2>
