--- a/reservas/index.html
+++ b/reservas/index.html
@@ -34,12 +34,12 @@
     .sim-total{margin-top:12px; padding:14px; border:1px solid #efe7df; border-radius:12px; background:linear-gradient(135deg,#fff,#faf7f2)}
     .sim-total .row{display:flex; justify-content:space-between; margin:6px 0}
     .sim-total .grand{font-weight:700; font-size:20px}
-    .sim-actions{display:flex; gap:10px; flex-wrap:wrap; margin-top:12px}
+    .sim-actions{display:flex; flex-direction:column; gap:10px; margin-top:12px}
     .btn{appearance:none; border:0; background:#8b5e34; color:#fff; border-radius:10px; padding:10px 14px; cursor:pointer}
     .btn.secondary{background:#374151}
     .note{font-size:12px; color:#6b7280; margin-top:6px}
     .warn{color:#991b1b; font-size:13px}
-    .hp{display:none}
+    .consent-line{display:flex; align-items:center; gap:8px}
   </style>
 </head>
 
@@ -63,11 +63,12 @@
   <main class="section">
     <div class="container">
       <h1 style="text-align:center">Pedido de Reserva</h1>
-      <p style="text-align:center">Preencha o formulário para verificarmos disponibilidade. Respondemos por email ou telefone.</p>
+      <p style="text-align:center">Use o simulador para verificar o valor estimado e enviar-nos o pedido.</p>
 
       <!-- Simulador de preços -->
       <section id="simulador-precos" class="simulador" aria-labelledby="sim-title">
         <h2 id="sim-title" style="margin-top:0">Simulador de preços</h2>
+
         <div class="sim-grid">
           <div>
             <label for="checkin">Check-in</label>
@@ -106,84 +107,20 @@
           </div>
           <p id="sim-msg" class="warn" hidden></p>
         </div>
+
         <div class="sim-actions">
-          <button id="sim-copy" type="button" class="btn secondary">Copiar orçamento</button>
+          <label class="consent-line">
+            <input id="consent-terms" type="checkbox" required>
+            <span>Li e aceito os <a href="/termos-e-condicoes/" target="_blank" rel="noopener">Termos e Condições</a>.</span>
+          </label>
+          <label class="consent-line">
+            <input id="consent-privacy" type="checkbox" required>
+            <span>Li e aceito a <a href="/politica-privacidade/" target="_blank" rel="noopener">Política de Privacidade</a>.</span>
+          </label>
+
+          <button id="sim-reservar" type="button" class="btn">Reservar agora</button>
         </div>
       </section>
-
-      <!-- Formulário -->
-      <form id="bookingForm" action="https://formspree.io/f/xanllrjv" method="POST" novalidate>
-        <!-- Honeypot anti-spam -->
-        <input type="text" name="website" class="hp" aria-hidden="true" tabindex="-1" autocomplete="off" hidden>
-
-        <p>
-          <label for="nome">Nome completo *</label>
-          <input id="nome" name="nome" type="text" required autocomplete="name">
-        </p>
-
-        <p>
-          <label for="email">Email *</label>
-          <input id="email" name="email" type="email" required autocomplete="email">
-        </p>
-
-        <p>
-          <label for="telefone">Telefone *</label>
-          <input id="telefone" name="telefone" type="tel" required inputmode="tel" placeholder="+351 ...">
-        </p>
-
-        <p>
-          <label for="alojamento">Tipo de alojamento *</label>
-          <select id="alojamento" name="alojamento" required>
-            <option>Casa completa</option>
-          </select>
-        </p>
-
-        <p>
-          <label for="checkin-form">Check-in *</label>
-          <input id="checkin-form" name="checkin_form" type="date" required>
-        </p>
-
-        <p>
-          <label for="checkout-form">Check-out *</label>
-          <input id="checkout-form" name="checkout_form" type="date" required>
-        </p>
-
-        <p>
-          <label for="adultos-form">Adultos *</label>
-          <input id="adultos-form" name="adultos_form" type="number" min="1" max="7" value="2" required>
-        </p>
-
-        <p>
-          <label for="criancas-form">Crianças</label>
-          <input id="criancas-form" name="criancas_form" type="number" min="0" max="6" value="0">
-        </p>
-
-        <p>
-          <label for="mensagem">Mensagem / pedidos especiais</label>
-          <textarea id="mensagem" name="mensagem" rows="5" placeholder="Ex.: berço, check-in tardio, alergias…"></textarea>
-        </p>
-
-        <!-- Metadados do simulador para enviar com o formulário -->
-        <input type="hidden" id="sim-total-hidden" name="simulacao_total" value="">
-        <input type="hidden" id="sim-breakdown-hidden" name="simulacao_detalhe" value="">
-
-        <p class="consent">
-          <input id="consent" name="consent" type="checkbox" required>
-          <label for="consent">Aceito o tratamento dos meus dados para efeitos de gestão de reserva, de acordo com a
-            <a href="/politica-privacidade/">Política de Privacidade</a>.</label>
-        </p>
-
-        <p style="text-align:center">
-          <button type="submit" class="btn primary">Pedir disponibilidade</button>
-        </p>
-
-        <p id="status-ok" style="display:none; color:#065f46; text-align:center;">Pedido enviado com sucesso. Obrigado!</p>
-        <p id="status-err" style="display:none; color:#991b1b; text-align:center;">Erro ao enviar. Verifique os campos e tente novamente.</p>
-
-        <!-- Metadados -->
-        <input type="hidden" name="_subject" value="Novo pedido de reserva — Site">
-        <input type="hidden" name="_page" value="/reservas">
-      </form>
 
       <hr>
 
@@ -228,7 +165,7 @@
   <!-- Scripts (deferred) -->
   <script defer src="/js/cookies.js"></script>
   <script defer src="/js/app.js"></script>
-  <!-- reservas.js contém toda a lógica do simulador + validações; não há JS inline por causa da CSP -->
+  <!-- reservas.js: faz o cálculo e envia para o mesmo Formspree (/f/xanllrjv) -->
   <script defer src="/js/reservas.js"></script>
 </body>
 </html>
