--- a/reservas/index.html
+++ b/reservas/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="/css/style.css">
 
   <style>
-    /* Estilos leves para o simulador (podes mover para /css/style.css) */
+    /* Layout leve do simulador; herda cores/tipografia do site */
     .simulador{background:#fff; border:1px solid #e5e7eb; border-radius:14px; padding:16px; box-shadow:0 6px 16px rgba(0,0,0,.06); margin:24px 0}
     .sim-grid{display:grid; grid-template-columns:1fr 1fr; gap:12px}
     @media (max-width:800px){.sim-grid{grid-template-columns:1fr}}
@@ -35,8 +35,6 @@
     .sim-total .row{display:flex; justify-content:space-between; margin:6px 0}
     .sim-total .grand{font-weight:700; font-size:20px}
     .sim-actions{display:flex; flex-direction:column; gap:10px; margin-top:12px}
-    .btn{appearance:none; border:0; background:#8b5e34; color:#fff; border-radius:10px; padding:10px 14px; cursor:pointer}
-    .btn.secondary{background:#374151}
     .note{font-size:12px; color:#6b7280; margin-top:6px}
     .warn{color:#991b1b; font-size:13px}
     .consent-line{display:flex; align-items:center; gap:8px}
@@ -65,7 +63,7 @@
       <h1 style="text-align:center">Pedido de Reserva</h1>
       <p style="text-align:center">Use o simulador para verificar o valor estimado e enviar-nos o pedido.</p>
 
-      <!-- Simulador de preços -->
+      <!-- Simulador de preços (com campos de contacto) -->
       <section id="simulador-precos" class="simulador" aria-labelledby="sim-title">
         <h2 id="sim-title" style="margin-top:0">Simulador de preços</h2>
 
@@ -86,13 +84,31 @@
             <label for="criancas">Crianças</label>
             <input id="criancas" name="criancas" type="number" min="0" max="6" value="0">
           </div>
+          <div>
+            <label for="nome">Nome completo</label>
+            <input id="nome" name="nome" type="text" autocomplete="name" placeholder="Ex.: Maria Silva">
+          </div>
+          <div>
+            <label for="email">Email</label>
+            <input id="email" name="email" type="email" autocomplete="email" placeholder="exemplo@dominio.pt">
+          </div>
+          <div>
+            <label for="telefone">Telefone</label>
+            <input id="telefone" name="telefone" type="tel" inputmode="tel" placeholder="+351 …">
+          </div>
+          <div>
+            <label for="alojamento">Tipo de alojamento</label>
+            <select id="alojamento" name="alojamento">
+              <option selected>Casa completa</option>
+            </select>
+          </div>
         </div>
 
-        <p class="note">Regras: <strong>137€ / noite</strong> inclui <strong>1–2 pessoas</strong> (pequeno-almoço). Pessoas extra: <strong>+35€ / pessoa / noite</strong>. Mínimo <strong>2 noites</strong>, máximo <strong>30 noites</strong>, capacidade <strong>até 7 pessoas</strong>.</p>
+        <p class="note">Regras: <strong>137€ / noite</strong> inclui <strong>1–2 pessoas</strong> (pequeno‑almoço). Pessoas extra: <strong>+35€ / pessoa / noite</strong>. Mínimo <strong>2 noites</strong>, máximo <strong>30 noites</strong>, capacidade <strong>até 7 pessoas</strong>.</p>
 
         <div class="sim-kpi">
           <div class="k"><b id="k-noites">0</b><span>noites</span></div>
-          <div class="k"><b id="k-base">137 €</b><span>base / noite</span></div>
+          <div class="k"><b id="k-nightly">137 €</b><span>preço / noite (total)</span></div>
           <div class="k"><b id="k-grupo">2</b><span>pessoas (total)</span></div>
         </div>
 
@@ -100,7 +116,7 @@
           <div class="row"><span>Noites</span><span id="bk-noites">0</span></div>
           <div class="row"><span>Base (1–2 pessoas)</span><span id="bk-base">137 € / noite</span></div>
           <div class="row"><span>Pessoas extra</span><span id="bk-extra">0 €</span></div>
-          <div class="row"><span>Pequeno-almoço</span><span>Incluído</span></div>
+          <div class="row"><span>Pequeno‑almoço</span><span>Incluído</span></div>
           <div class="row" style="border-top:1px dashed #e5e7eb; padding-top:8px; margin-top:8px">
             <span class="grand">Total estimado</span>
             <span class="grand" id="bk-total">0 €</span>
@@ -118,7 +134,7 @@
             <span>Li e aceito a <a href="/politica-privacidade/" target="_blank" rel="noopener">Política de Privacidade</a>.</span>
           </label>
 
-          <button id="sim-reservar" type="button" class="btn">Reservar agora</button>
+          <button id="sim-reservar" type="button" class="btn primary">Reservar agora</button>
         </div>
       </section>
 
@@ -127,9 +143,8 @@
       <h2 style="text-align:center">Outras formas de reservar</h2>
       <p style="text-align:center">
         <a href="https://www.airbnb.pt/rooms/875560493639889462" target="_blank" rel="noopener">Airbnb</a> ·
-        <a href="https://www.booking.com/hotel/pt/quinta-dos-avos-lourenco.pt-pt.html" target="_blank" rel="noopener">Booking</a> ·
-        <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20disponibilidade."
-           target="_blank" rel="noopener">WhatsApp</a>
+        <a href="https://www.booking.com/hotel/pt/quinta-dos-avos-lourenço.pt-pt.html" target="_blank" rel="noopener">Booking</a> ·
+        <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20disponibilidade." target="_blank" rel="noopener">WhatsApp</a>
       </p>
     </div>
   </main>
@@ -145,9 +160,7 @@
   </footer>
 
   <!-- WhatsApp -->
-  <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Av%C3%B3s%20Louren%C3%A7o."
-     class="whatsapp-float" target="_blank" rel="noopener noreferrer"
-     aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
+  <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Av%C3%B3s%20Louren%C3%A7o." class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
     <img src="/images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
@@ -165,7 +178,7 @@
   <!-- Scripts (deferred) -->
   <script defer src="/js/cookies.js"></script>
   <script defer src="/js/app.js"></script>
-  <!-- reservas.js: faz o cálculo e envia para o mesmo Formspree (/f/xanllrjv) -->
+  <!-- reservas.js: cálculo e envio para o Formspree (/f/xanllrjv) -->
   <script defer src="/js/reservas.js"></script>
 </body>
 </html>
