--- a/reservas/index.html
+++ b/reservas/index.html
@@ -37,16 +37,8 @@
     .sim-actions{display:flex; flex-direction:column; gap:10px; margin-top:12px}
     .note{font-size:12px; color:#6b7280; margin-top:6px}
     .warn{color:#991b1b; font-size:13px}
-    .consent-line{display:flex; align-items:center; gap:8px}
-    /* Campos mais arredondados */
-    input, select, textarea {
-      width:100%; padding:12px 14px;
-      border:1px solid #e5e7eb; border-radius:16px;
-      background:#fff; outline:none;
-    }
-    input:focus, select:focus, textarea:focus {
-      border-color:#8b5e34; box-shadow:0 0 0 3px rgba(139,94,52,.2);
-    }
+    .consent-line{display:flex; align-items:flex-start; gap:8px}
+    .consent-line input[type="checkbox"]{margin-top:2px}
   </style>
 </head>
 
@@ -70,19 +62,53 @@
       <h1 style="text-align:center">Pedido de Reserva</h1>
       <p style="text-align:center">Use o simulador para verificar o valor estimado e enviar-nos o pedido.</p>
 
-      <!-- Simulador de preços -->
+      <!-- Simulador de preços (com campos de contacto) -->
       <section id="simulador-precos" class="simulador" aria-labelledby="sim-title">
         <h2 id="sim-title" style="margin-top:0">Simulador de preços</h2>
 
         <div class="sim-grid">
-          <div><label for="checkin">Check-in</label><input id="checkin" name="checkin" type="date"></div>
-          <div><label for="checkout">Check-out</label><input id="checkout" name="checkout" type="date"></div>
-          <div><label for="adultos">Adultos</label><input id="adultos" name="adultos" type="number" min="1" max="7" value="2"></div>
-          <div><label for="criancas">Crianças</label><input id="criancas" name="criancas" type="number" min="0" max="6" value="0"></div>
-          <div><label for="nome">Nome completo</label><input id="nome" name="nome" type="text" autocomplete="name" placeholder="Ex.: Maria Silva"></div>
-          <div><label for="email">Email</label><input id="email" name="email" type="email" autocomplete="email" placeholder="exemplo@dominio.pt"></div>
-          <div><label for="telefone">Telefone</label><input id="telefone" name="telefone" type="tel" inputmode="tel" placeholder="+351 …"></div>
-          <div><label for="alojamento">Tipo de alojamento</label><select id="alojamento" name="alojamento"><option selected>Casa completa</option></select></div>
+          <div>
+            <label for="checkin">Check-in</label>
+            <input id="checkin" name="checkin" type="date"
+                   style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+          </div>
+          <div>
+            <label for="checkout">Check-out</label>
+            <input id="checkout" name="checkout" type="date"
+                   style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+          </div>
+          <div>
+            <label for="adultos">Adultos</label>
+            <input id="adultos" name="adultos" type="number" min="1" max="7" value="2"
+                   style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+          </div>
+          <div>
+            <label for="criancas">Crianças</label>
+            <input id="criancas" name="criancas" type="number" min="0" max="6" value="0"
+                   style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+          </div>
+          <div>
+            <label for="nome">Nome completo</label>
+            <input id="nome" name="nome" type="text" autocomplete="name" placeholder="Ex.: Maria Silva"
+                   style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+          </div>
+          <div>
+            <label for="email">Email</label>
+            <input id="email" name="email" type="email" autocomplete="email" placeholder="exemplo@dominio.pt"
+                   style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+          </div>
+          <div>
+            <label for="telefone">Telefone</label>
+            <input id="telefone" name="telefone" type="tel" inputmode="tel" placeholder="+351 …"
+                   style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+          </div>
+          <div>
+            <label for="alojamento">Tipo de alojamento</label>
+            <select id="alojamento" name="alojamento"
+                    style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+              <option selected>Casa completa</option>
+            </select>
+          </div>
         </div>
 
         <p class="note">Regras: <strong>137€ / noite</strong> inclui <strong>1–2 pessoas</strong> (pequeno-almoço). Pessoas extra: <strong>+35€ / pessoa / noite</strong>. Mínimo <strong>2 noites</strong>, máximo <strong>30 noites</strong>, capacidade <strong>até 7 pessoas</strong>.</p>
@@ -106,13 +132,21 @@
         </div>
 
         <div class="sim-actions">
-          <label class="consent-line"><input id="consent-terms" type="checkbox" required> <span>Li e aceito os <a href="/termos-e-condicoes/" target="_blank" rel="noopener">Termos e Condições</a>.</span></label>
-          <label class="consent-line"><input id="consent-privacy" type="checkbox" required> <span>Li e aceito a <a href="/politica-privacidade/" target="_blank" rel="noopener">Política de Privacidade</a>.</span></label>
+          <label class="consent-line">
+            <input id="consent-terms" type="checkbox" required>
+            <span>Li e aceito os <a href="/termos-e-condicoes/" target="_blank" rel="noopener">Termos e Condições</a>.</span>
+          </label>
+          <label class="consent-line">
+            <input id="consent-privacy" type="checkbox" required>
+            <span>Li e aceito a <a href="/politica-privacidade/" target="_blank" rel="noopener">Política de Privacidade</a>.</span>
+          </label>
+
           <button id="sim-reservar" type="button" class="btn primary">Reservar agora</button>
         </div>
       </section>
 
       <hr>
+
       <h2 style="text-align:center">Outras formas de reservar</h2>
       <p style="text-align:center">
         <a href="https://www.airbnb.pt/rooms/875560493639889462" target="_blank" rel="noopener">Airbnb</a> ·
@@ -123,7 +157,8 @@
   </main>
 
   <footer class="footer">
-    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
+    <p>
+      © 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
       <a href="/politica-privacidade/">Política de Privacidade</a> ·
       <a href="/termos-e-condicoes/">Termos e Condições</a> ·
       <a href="https://www.livroreclamacoes.pt/Inicio/" target="_blank" rel="noopener noreferrer">Livro de Reclamações</a>
@@ -136,11 +171,15 @@
 
   <div id="cookie-consent" class="cookie-banner" role="dialog" aria-live="polite" hidden>
     <div class="cookie-inner">
-      <p class="cookie-text">Usamos cookies apenas para garantir o bom funcionamento do site. <a href="/cookies/">Saiba mais</a></p>
+      <p class="cookie-text">
+        Usamos cookies apenas para garantir o bom funcionamento do site.
+        <a href="/cookies/">Saiba mais</a>
+      </p>
       <button id="cookie-accept" type="button" class="btn-accept">Aceitar</button>
     </div>
   </div>
 
+  <!-- Scripts (deferred) -->
   <script defer src="/js/cookies.js"></script>
   <script defer src="/js/app.js"></script>
   <script defer src="/js/reservas.js"></script>
