--- a/reservas/index.html
+++ b/reservas/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Reservas · Quinta dos Avós Lourenço</title>
-  <meta name="description" content="Faça o seu pedido de reserva na Quinta dos Avós Lourenço, alojamento rural na Sertã.">
+  <title>Reservas · Quinta dos Avós Lourenço | Alojamento Rural na Sertã</title>
+  <meta name="description" content="Reserve a sua estadia na Quinta dos Avós Lourenço — alojamento rural na Sertã. Verifique preços, disponibilidade e faça o seu pedido de reserva.">
+  <link rel="canonical" href="https://quintadosavoslourenco.pt/reservas/">
+  <meta name="robots" content="index, follow">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
 
   <!-- CSP igual ao site, com permissões para Formspree -->
   <meta http-equiv="Content-Security-Policy" content="
@@ -18,27 +21,40 @@
     form-action 'self' https://formspree.io;
     upgrade-insecure-requests;
   ">
-  <meta name="referrer" content="strict-origin-when-cross-origin">
+
+  <!-- OG/Twitter básicos -->
+  <meta property="og:title" content="Reservas · Quinta dos Avós Lourenço">
+  <meta property="og:description" content="Faça o seu pedido de reserva na Quinta dos Avós Lourenço, alojamento rural na Sertã.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://quintadosavoslourenço.pt/reservas/">
 
   <!-- CSS principal do site -->
   <link rel="stylesheet" href="/css/style.css">
 
   <style>
-    /* Layout leve do simulador; herda cores/tipografia do site */
-    .simulador{background:#fff; border:1px solid #e5e7eb; border-radius:14px; padding:16px; box-shadow:0 6px 16px rgba(0,0,0,.06); margin:24px 0}
-    .sim-grid{display:grid; grid-template-columns:1fr 1fr; gap:12px}
+    /* Layout leve do simulador (herda cores/tipografia do site) */
+    .simulador{background:#fff;border:1px solid #e5e7eb;border-radius:14px;padding:16px;box-shadow:0 6px 16px rgba(0,0,0,.06);margin:24px 0}
+    .sim-grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
     @media (max-width:800px){.sim-grid{grid-template-columns:1fr}}
-    .sim-kpi{display:flex; flex-wrap:wrap; gap:10px; margin-top:8px}
-    .sim-kpi .k{flex:1 1 120px; background:#fafafa; border:1px dashed #e5e7eb; border-radius:16px; padding:10px}
-    .sim-kpi .k b{display:block; font-size:18px}
-    .sim-total{margin-top:12px; padding:14px; border:1px solid #efe7df; border-radius:12px; background:linear-gradient(135deg,#fff,#faf7f2)}
-    .sim-total .row{display:flex; justify-content:space-between; margin:6px 0}
-    .sim-total .grand{font-weight:700; font-size:20px}
-    .sim-actions{display:flex; flex-direction:column; gap:10px; margin-top:12px}
-    .note{font-size:12px; color:#6b7280; margin-top:6px}
-    .warn{color:#991b1b; font-size:13px}
-    .consent-line{display:flex; align-items:flex-start; gap:8px}
+    .sim-kpi{display:flex;flex-wrap:wrap;gap:10px;margin-top:8px}
+    .sim-kpi .k{flex:1 1 120px;background:#fafafa;border:1px dashed #e5e7eb;border-radius:16px;padding:10px}
+    .sim-kpi .k b{display:block;font-size:18px}
+    .sim-total{margin-top:12px;padding:14px;border:1px solid #efe7df;border-radius:12px;background:linear-gradient(135deg,#fff,#faf7f2)}
+    .sim-total .row{display:flex;justify-content:space-between;margin:6px 0}
+    .sim-total .grand{font-weight:700;font-size:20px}
+    .sim-actions{display:flex;flex-direction:column;gap:10px;margin-top:12px}
+    .note{font-size:12px;color:#6b7280;margin-top:6px}
+    .warn{color:#991b1b;font-size:13px}
+    .consent-line{display:flex;align-items:flex-start;gap:8px}
     .consent-line input[type="checkbox"]{margin-top:2px}
+
+    /* Inputs arredondados locais + fix iOS */
+    .round-field{width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff;appearance:none;-webkit-appearance:none;-moz-appearance:textfield;}
+    .with-spinner{position:relative}
+    .with-spinner .spinner{position:absolute;right:10px;top:50%;transform:translateY(-50%);display:flex;flex-direction:column;gap:2px}
+    .with-spinner .spinner button{border:none;background:none;cursor:pointer;line-height:1;padding:0;font-size:14px}
+    input[type="date"].round-field{height:52px;font-size:16px}
+    input[type="date"]::-webkit-date-and-time-value{text-align:left}
   </style>
 </head>
 
@@ -62,50 +78,56 @@
       <h1 style="text-align:center">Pedido de Reserva</h1>
       <p style="text-align:center">Use o simulador para verificar o valor estimado e enviar-nos o pedido.</p>
 
-      <!-- Simulador de preços (com campos de contacto) -->
       <section id="simulador-precos" class="simulador" aria-labelledby="sim-title">
         <h2 id="sim-title" style="margin-top:0">Simulador de preços</h2>
 
         <div class="sim-grid">
           <div>
             <label for="checkin">Check-in</label>
-            <input id="checkin" name="checkin" type="date"
-                   style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+            <input id="checkin" name="checkin" type="date" class="round-field">
           </div>
           <div>
             <label for="checkout">Check-out</label>
-            <input id="checkout" name="checkout" type="date"
-                   style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+            <input id="checkout" name="checkout" type="date" class="round-field">
           </div>
-          <div>
+
+          <!-- Adultos com setas -->
+          <div class="with-spinner">
             <label for="adultos">Adultos</label>
             <input id="adultos" name="adultos" type="number" min="1" max="7" value="2"
-                   style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+                   class="round-field" style="padding-right:38px">
+            <div class="spinner">
+              <button type="button" class="spin-up"   data-target="adultos" aria-label="Mais adultos">▲</button>
+              <button type="button" class="spin-down" data-target="adultos" aria-label="Menos adultos">▼</button>
+            </div>
           </div>
-          <div>
+
+          <!-- Crianças com setas -->
+          <div class="with-spinner">
             <label for="criancas">Crianças</label>
             <input id="criancas" name="criancas" type="number" min="0" max="6" value="0"
-                   style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+                   class="round-field" style="padding-right:38px">
+            <div class="spinner">
+              <button type="button" class="spin-up"   data-target="criancas" aria-label="Mais crianças">▲</button>
+              <button type="button" class="spin-down" data-target="criancas" aria-label="Menos crianças">▼</button>
+            </div>
           </div>
+
           <div>
             <label for="nome">Nome completo</label>
-            <input id="nome" name="nome" type="text" autocomplete="name" placeholder="Ex.: Maria Silva"
-                   style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+            <input id="nome" name="nome" type="text" autocomplete="name" placeholder="Ex.: Maria Silva" class="round-field">
           </div>
           <div>
             <label for="email">Email</label>
-            <input id="email" name="email" type="email" autocomplete="email" placeholder="exemplo@dominio.pt"
-                   style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+            <input id="email" name="email" type="email" autocomplete="email" placeholder="exemplo@dominio.pt" class="round-field">
           </div>
           <div>
             <label for="telefone">Telefone</label>
-            <input id="telefone" name="telefone" type="tel" inputmode="tel" placeholder="+351 …"
-                   style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+            <input id="telefone" name="telefone" type="tel" inputmode="tel" placeholder="+351 …" class="round-field">
           </div>
           <div>
             <label for="alojamento">Tipo de alojamento</label>
-            <select id="alojamento" name="alojamento"
-                    style="width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff">
+            <select id="alojamento" name="alojamento" class="round-field">
               <option selected>Casa completa</option>
             </select>
           </div>
@@ -124,7 +146,7 @@
           <div class="row"><span>Base (1–2 pessoas)</span><span id="bk-base">137 € / noite</span></div>
           <div class="row"><span>Pessoas extra</span><span id="bk-extra">0 €</span></div>
           <div class="row"><span>Pequeno-almoço</span><span>Incluído</span></div>
-          <div class="row" style="border-top:1px dashed #e5e7eb; padding-top:8px; margin-top:8px">
+          <div class="row" style="border-top:1px dashed #e5e7eb;padding-top:8px;margin-top:8px">
             <span class="grand">Total estimado</span>
             <span class="grand" id="bk-total">0 €</span>
           </div>
