--- a/reservas/index.html
+++ b/reservas/index.html
@@ -22,17 +22,16 @@
     upgrade-insecure-requests;
   ">
 
-  <!-- OG/Twitter básicos -->
+  <!-- OG básicos -->
   <meta property="og:title" content="Reservas · Quinta dos Avós Lourenço">
   <meta property="og:description" content="Faça o seu pedido de reserva na Quinta dos Avós Lourenço, alojamento rural na Sertã.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://quintadosavoslourenço.pt/reservas/">
 
-  <!-- CSS principal do site -->
+  <!-- CSS principal -->
   <link rel="stylesheet" href="/css/style.css">
 
   <style>
-    /* Layout leve do simulador (herda cores/tipografia do site) */
     .simulador{background:#fff;border:1px solid #e5e7eb;border-radius:14px;padding:16px;box-shadow:0 6px 16px rgba(0,0,0,.06);margin:24px 0}
     .sim-grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
     @media (max-width:800px){.sim-grid{grid-template-columns:1fr}}
@@ -51,9 +50,9 @@
     /* Inputs arredondados locais + fix iOS */
     .round-field{width:100%;padding:12px 14px;border:1px solid #e5e7eb;border-radius:16px;background:#fff;appearance:none;-webkit-appearance:none;-moz-appearance:textfield;}
     .with-spinner{position:relative}
-    .with-spinner .spinner{position:absolute;right:10px;top:50%;transform:translateY(-50%);display:flex;flex-direction:column;gap:2px}
-    .with-spinner .spinner button{border:none;background:none;cursor:pointer;line-height:1;padding:0;font-size:14px}
-    input[type="date"].round-field{height:52px;font-size:16px}
+    .with-spinner .spinner{position:absolute;right:12px;top:50%;transform:translateY(-50%);display:flex;flex-direction:column;gap:2px}
+    .with-spinner .spinner button{border:none;background:none;cursor:pointer;line-height:1;padding:0;font-size:14px;color:#8b5e34}
+    input[type="date"].round-field{height:52px;font-size:16px;color:#111827;-webkit-text-fill-color:currentColor;}
     input[type="date"]::-webkit-date-and-time-value{text-align:left}
   </style>
 </head>
@@ -95,18 +94,18 @@
           <div class="with-spinner">
             <label for="adultos">Adultos</label>
             <input id="adultos" name="adultos" type="number" min="1" max="7" value="2"
-                   class="round-field" style="padding-right:38px">
+                   class="round-field" readonly aria-readonly="true" style="padding-right:48px;caret-color:transparent;">
             <div class="spinner">
               <button type="button" class="spin-up"   data-target="adultos" aria-label="Mais adultos">▲</button>
               <button type="button" class="spin-down" data-target="adultos" aria-label="Menos adultos">▼</button>
             </div>
           </div>
 
-          <!-- Crianças com setas -->
+          <!-- Crianças (0–4 anos) com setas -->
           <div class="with-spinner">
-            <label for="criancas">Crianças</label>
+            <label for="criancas">Crianças (0–4 anos)</label>
             <input id="criancas" name="criancas" type="number" min="0" max="6" value="0"
-                   class="round-field" style="padding-right:38px">
+                   class="round-field" readonly aria-readonly="true" style="padding-right:48px;caret-color:transparent;">
             <div class="spinner">
               <button type="button" class="spin-up"   data-target="criancas" aria-label="Mais crianças">▲</button>
               <button type="button" class="spin-down" data-target="criancas" aria-label="Menos crianças">▼</button>
@@ -133,7 +132,12 @@
           </div>
         </div>
 
-        <p class="note">Regras: <strong>137€ / noite</strong> inclui <strong>1–2 pessoas</strong> (pequeno-almoço). Pessoas extra: <strong>+35€ / pessoa / noite</strong>. Mínimo <strong>2 noites</strong>, máximo <strong>30 noites</strong>, capacidade <strong>até 7 pessoas</strong>.</p>
+        <p class="note">
+          Regras: <strong>137€ / noite</strong> inclui <strong>1–2 adultos</strong> (pequeno-almoço).
+          Adultos extra: <strong>+35€ / adulto / noite</strong>. <strong>Crianças 0–4 anos: gratuito</strong>
+          (não acrescentam custo). Acima de 4 anos conta como adulto.
+          Mínimo <strong>2 noites</strong>, máximo <strong>30 noites</strong>, capacidade <strong>até 7 pessoas</strong> (adultos + crianças).
+        </p>
 
         <div class="sim-kpi">
           <div class="k"><b id="k-noites">0</b><span>noites</span></div>
@@ -143,8 +147,9 @@
 
         <div class="sim-total" id="sim-total">
           <div class="row"><span>Noites</span><span id="bk-noites">0</span></div>
-          <div class="row"><span>Base (1–2 pessoas)</span><span id="bk-base">137 € / noite</span></div>
-          <div class="row"><span>Pessoas extra</span><span id="bk-extra">0 €</span></div>
+          <div class="row"><span>Base (1–2 adultos)</span><span id="bk-base">137 € / noite</span></div>
+          <div class="row"><span>Adultos extra</span><span id="bk-extra">0 €</span></div>
+          <div class="row"><span>Crianças 0–4</span><span>Gratuito</span></div>
           <div class="row"><span>Pequeno-almoço</span><span>Incluído</span></div>
           <div class="row" style="border-top:1px dashed #e5e7eb;padding-top:8px;margin-top:8px">
             <span class="grand">Total estimado</span>
@@ -187,7 +192,7 @@
     </p>
   </footer>
 
-  <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Av%C3%B3s%20Louren%C3%A7o." class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
+  <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Louren%C3%A7o." class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
     <img src="/images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
@@ -201,7 +206,7 @@
     </div>
   </div>
 
-  <!-- Scripts (deferred) -->
+  <!-- Scripts -->
   <script defer src="/js/cookies.js"></script>
   <script defer src="/js/app.js"></script>
   <script defer src="/js/reservas.js"></script>
