--- a/reservas/index.html
+++ b/reservas/index.html
@@ -88,7 +88,7 @@
       <p style="text-align:center">Use o simulador para verificar o valor estimado e enviar-nos o pedido.</p>
 
       <section id="simulador-precos" class="simulador" aria-labelledby="sim-title">
-        <h2 id="sim-title" style="margin-top:0">Simulador de preços</h2>
+        <h2 id="sim-title" style="margin-top:0">Faça a sua reserva</h2>
 
         <div class="sim-grid">
           <div>
@@ -124,11 +124,11 @@
 
           <div>
             <label for="nome">Nome completo</label>
-            <input id="nome" name="nome" type="text" autocomplete="name" placeholder="Ex.: Maria Silva" class="round-field">
+            <input id="nome" name="nome" type="text" autocomplete="name" placeholder="Ex.: Lourenço" class="round-field">
           </div>
           <div>
             <label for="email">Email</label>
-            <input id="email" name="email" type="email" autocomplete="email" placeholder="exemplo@dominio.pt" class="round-field">
+            <input id="email" name="email" type="email" autocomplete="email" placeholder="exemplo@gamil.com" class="round-field">
           </div>
           <div>
             <label for="telefone">Telefone</label>
@@ -138,6 +138,7 @@
             <label for="alojamento">Tipo de alojamento</label>
             <select id="alojamento" name="alojamento" class="round-field">
               <option selected>Casa completa</option>
+              <option selected>...</option>
             </select>
           </div>
         </div>
