--- a/reservas/index.html
+++ b/reservas/index.html
@@ -128,7 +128,7 @@
           </div>
           <div>
             <label for="email">Email</label>
-            <input id="email" name="email" type="email" autocomplete="email" placeholder="exemplo@gamil.com" class="round-field">
+            <input id="email" name="email" type="email" autocomplete="email" placeholder="exemplo@gmail.com" class="round-field">
           </div>
           <div>
             <label for="telefone">Telefone</label>
