--- a/reservas/index.html
+++ b/reservas/index.html
@@ -88,7 +88,7 @@
       <p style="text-align:center">Use o simulador para verificar o valor estimado e enviar-nos o pedido.</p>
 
       <section id="simulador-precos" class="simulador" aria-labelledby="sim-title">
-        <h2 id="sim-title" style="margin-top:0">Faça a sua reserva</h2>
+        <h2 id="sim-title" style="margin-top:0">Reserve agora</h2>
 
         <div class="sim-grid">
           <div>
