Update index.html add google and favicon

--- a/contactos/index.html
+++ b/contactos/index.html
@@ -6,6 +6,23 @@
   <title>Contactos · Quinta dos Avós Lourenço</title>
   <meta name="description" content="Contacte a Quinta dos Avós Lourenço para informações e reservas.">
 
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JS7FTWGPQX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JS7FTWGPQX');
+</script>
+  
+ <!-- ✅ Ícone da aba do navegador -->
+  <!-- Favicons -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  
   <!-- ✅ Políticas de segurança -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
