--- a/galeria/index.html
+++ b/galeria/index.html
@@ -51,7 +51,7 @@
    <nav class="menu" aria-label="Navegação principal">
   <a href="/">Início</a>
   <a href="/sobre/">Sobre</a>
-  <a href="/galeria/">Galeria</a>
+  <a href="/galeria/" class="active">Galeria</a>
   <a href="/contactos/">Contactos</a>
   <a href="/reservas/">Reservas</a>
 </nav>
