Update index.html centro contactos

--- a/contactos/index.html
+++ b/contactos/index.html
@@ -59,7 +59,7 @@
   </header>
 
   <!-- Conteúdo -->
-  <main class="section">
+  <main class="section contactos">
     <div class="container">
       <h1>Contactos</h1>
       <p>Se tiver alguma questão ou interesse, contacte-nos pelos seguintes meios:</p>
