--- a/contactos/index.html
+++ b/contactos/index.html
@@ -75,7 +75,7 @@
         <a href="mailto:geral@quintadosavoslourenco.pt">geral@quintadosavoslourenco.pt</a><br>
         Telefone:
         <a href="tel:+351960446713">+351 960 446 713</a>
-        <span class="note">Chamada para rede móvel nacional</span>
+        <span class="note">(Chamada para rede móvel nacional)</span>
       </p>
 
       <p style="margin-top:20px; display:flex; flex-wrap:wrap; gap:10px; justify-content:center;">
