--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <header class="topbar">
     <div class="brand">
      <a href="/">
-  <img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+  <img src="/images/logo.webp" alt="Quinta dos Avós Lourenço" class="logo">
       </a>
     </div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
