--- a/reservas/index.html
+++ b/reservas/index.html
@@ -75,7 +75,7 @@
 
 <body class="page-reservas">
   <header class="topbar">
-    <div class="brand"><a href="/"><img src="/images/logo.png" alt="Quinta dos Avós Lourenço" class="logo"></a></div>
+    <div class="brand"><a href="/"><img src="/images/logo.webp" alt="Quinta dos Avós Lourenço" class="logo"></a></div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
     <nav class="menu" aria-label="Navegação principal">
       <a href="/">Início</a><a href="/sobre/">Sobre</a><a href="/galeria/">Galeria</a><a href="/contactos/">Contactos</a><a href="/reservas/" class="active">Reservas</a>
