Update index.html ad new photos

--- a/galeria/index.html
+++ b/galeria/index.html
@@ -72,9 +72,13 @@
         <img src="/images/galeria7.webp" alt="Detalhes rústicos" loading="lazy">
         <img src="/images/galeria8.webp" alt="Animais da quinta" loading="lazy">
         <img src="/images/galeria9.webp" alt="Pátio exterior" loading="lazy">
-       <img src="/images/galeria10a.webp" alt="Caminho entre oliveiras" loading="lazy">
+        <img src="/images/galeria10.webp" alt="Caminho entre oliveiras" loading="lazy">
         <img src="/images/galeria11.webp" alt="Área de refeições" loading="lazy">
         <img src="/images/galeria12.webp" alt="Nascer do sol na propriedade" loading="lazy">
+        <img src="/images/galeria13.webp" alt="Nascer do sol na propriedade" loading="lazy">
+        <img src="/images/galeria14.webp" alt="Nascer do sol na propriedade" loading="lazy">
+        <img src="/images/galeria15.webp" alt="Nascer do sol na propriedade" loading="lazy">
+        <img src="/images/galeria16.webp" alt="Nascer do sol na propriedade" loading="lazy">
       </div>
     </div>
   </main>
