Update index.html novo texto sobre

--- a/sobre/index.html
+++ b/sobre/index.html
@@ -65,47 +65,52 @@
       <h1>Sobre a Quinta dos Avós Lourenço</h1>
 
     <p>
-  Entre as colinas serenas do concelho da Sertã, onde a natureza ainda dita o ritmo dos dias,
-  encontra-se a <strong>Quinta dos Avós Lourenço</strong> — um refúgio com alma, história e o aconchego
-  de uma casa que existe desde <strong>1853</strong>.
-</p>
+            Entre montanhas e colinas verdes do concelho da Sertã, no coração de Portugal, 
+            ergue-se a <strong>Quinta dos Avós Lourenço</strong> — uma casa com mais de um século e meio de história. 
+            Foi o trisavô Agostinho quem, em 1853, lhe deu alma, passando-a de geração em geração até aos dias de hoje.
+        </p>
 
-<p>
-  Aqui, onde o <strong>avô</strong> guardava o rio e a <strong>avó</strong> vivia do campo,
-  o tempo passa devagar. O campo continua vivo, agora aberto a quem procura a serenidade, o conforto
-  e o encanto das coisas simples.
-</p>
+        <p>
+            A casa principal, com o seu encanto rústico e acolhedor, foi cuidadosamente restaurada para manter a autenticidade 
+            das origens sem abdicar do conforto moderno. Dispõe de quatro quartos luminosos, uma sala de estar com lareira 
+            onde o estalar da lenha se mistura com o riso das conversas, com recantos cheios de história, observados em cada 
+            parede e detalhe.
+        </p>
 
-<p>
-  Rodeada por <strong>oliveiras, árvores de fruto e animais</strong> que fazem parte da paisagem —
-  da burra e das ovelhas aos porcos e pássaros que dão música aos dias —,
-  a Quinta oferece uma verdadeira <em>imersão na vida rural</em>, sem renunciar às comodidades modernas.
-</p>
+        <p>
+            As janelas abrem-se para uma paisagem que convida à contemplação: montanhas suaves que parecem dunas, com animais 
+            em liberdade e trilhos até ao rio, onde o silêncio se funde com os sons da natureza.
+        </p>
 
-<p>
-  A casa, com <strong>quatro quartos</strong> cuidadosamente restaurados, combina o charme rústico
-  de uma antiga casa de campo com o conforto e o bom gosto de hoje.
-  Cada detalhe conta uma história, cada recanto convida ao descanso.
-</p>
+        <p>
+            O lugar é único, rodeado por oliveiras e árvores de fruto, misturado com animais a pastar, abelhas à procura do pólen 
+            e pássaros a chalrear que dão música aos dias, construindo uma paisagem que pulsa vida. Desta harmonia nasce o nosso 
+            azeite e mel biológicos, símbolo de uma biodiversidade rica e preservada.
+        </p>
 
-<p>
-  Os hóspedes começam o dia com um <strong>pequeno-almoço caseiro</strong>,
-  com <em>pão quentinho e produtos locais</em>, e seguem por <strong>trilhos até ao rio</strong>,
-  onde o silêncio só é interrompido pelos sons da natureza.
-</p>
+        <p>
+            Os Avós Lourenço sempre adoraram receber e partilhar o que cultivavam e colhiam no campo. Hoje, mantemos viva essa 
+            tradição — partilhar a vida no campo é dar a conhecer a quem nos visita a oportunidade de vivenciar a autenticidade 
+            da nossa quinta, que oferece um verdadeiro mergulho na vida rural.
+        </p>
 
-<p>
-  Quem nos visita fala sempre do <strong>sossego</strong>, da <strong>vista deslumbrante</strong>
-  e da <strong>magia dos animais</strong> que tornam a experiência inesquecível.
-</p>
+        <p>
+            Mais do que um alojamento, a Quinta dos Avós Lourenço é um legado de família transformado em partilha — um lugar onde 
+            as memórias de outrora inspiram as histórias de hoje.
+        </p>
 
-<p>
-  Mais do que um alojamento, a <strong>Quinta dos Avós Lourenço</strong> é um
-  <em>legado de família transformado em partilha</em> — um lugar onde as memórias de ontem
-  inspiram as histórias de hoje.
-</p>
+        <p>
+            Quem nos visita fala do sossego, da vista deslumbrante e da magia dos animais que tornam a experiência inesquecível.
+        </p>
 
-<p><strong>Aqui, cada amanhecer é um regresso às origens.</strong></p>
+        <p>
+            As manhãs começam com um pequeno-almoço caseiro, com pão quentinho e produtos locais, saboreado dentro de casa, junto 
+            dos animais ou em piquenique sobre o relvado.
+        </p>
+
+        <p>
+            Aqui, cada amanhecer é um regresso às origens — um convite a abrandar e redescobrir a simplicidade da vida no campo.
+        </p>
     </div>
   </main>
 
