Update index.html troca alojamento rural para local

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <!-- Hero -->
 <section class="hero">
   <div class="container">
-    <span class="badge">Alojamento Rural</span>
+    <span class="badge">Alojamento Local</span>
     <h1>Quinta dos Avós Lourenço</h1>
     <p>Refúgio tranquilo na Sertã, rodeado de natureza e tradição desde 1853.</p>
     <p>
