Update index.html <strong>

--- a/sobre/index.html
+++ b/sobre/index.html
@@ -67,7 +67,7 @@
     <p>
             Entre montanhas e colinas verdes do concelho da Sertã, no coração de Portugal, 
             ergue-se a <strong>Quinta dos Avós Lourenço</strong> — uma casa com mais de um século e meio de história. 
-            Foi o <strong>trisavô Agostinho</strong>strong> quem, em <strong>1853</strong>strong>, lhe deu alma, passando-a de geração em geração até aos dias de hoje.
+            Foi o <strong>trisavô Agostinho</strong>quem, em <strong>1853</strong>, lhe deu alma, passando-a de geração em geração até aos dias de hoje.
         </p>
 
         <p>
@@ -89,13 +89,13 @@
         </p>
 
         <p>
-            Os Avós Lourenço sempre adoraram receber e partilhar o que cultivavam e colhiam no campo. Hoje, mantemos viva essa 
+            Os <strong>Avós Lourenço</strong>sempre adoraram receber e partilhar o que cultivavam e colhiam no campo. Hoje, mantemos viva essa 
             tradição — partilhar a vida no campo é dar a conhecer a quem nos visita a oportunidade de vivenciar a autenticidade 
             da nossa quinta, que oferece um verdadeiro mergulho na vida rural.
         </p>
 
         <p>
-            Mais do que um alojamento, a Quinta dos Avós Lourenço é um legado de família transformado em partilha — um lugar onde 
+            Mais do que um alojamento, a <strong>Quinta dos Avós Lourenço</strong>strong> é um legado de família transformado em partilha — um lugar onde 
             as memórias de outrora inspiram as histórias de hoje.
         </p>
 
@@ -109,7 +109,7 @@
         </p>
 
         <p>
-            Aqui, cada amanhecer é um regresso às origens — um convite a abrandar e redescobrir a simplicidade da vida no campo.
+            <strong>Aqui, cada amanhecer é um regresso às origens</strong>— um convite a abrandar e redescobrir a simplicidade da vida no campo.
         </p>
     </div>
   </main>
