Update index.html manifest

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </script>
 
   <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#FFFFFF">
   
  <!-- ✅ Ícone da aba do navegador -->
   <!-- Favicons -->
