Update index.html mudancas Pedido de Reserva

--- a/reservas/index.html
+++ b/reservas/index.html
@@ -98,10 +98,10 @@
   <main class="section">
     <div class="container">
       <h1 style="text-align:center">Pedido de Reserva</h1>
-      <p style="text-align:center">Use o simulador para verificar o valor estimado e enviar-nos o pedido.</p>
+      <p style="text-align:center">Use o simulador para verificar o valor e enviar-nos o pedido.</p>
 
       <section id="simulador-precos" class="simulador" aria-labelledby="sim-title">
-        <h2 id="sim-title" style="margin-top:0">Pré-reserve agora</h2>
+        <h2 id="sim-title" style="margin-top:0">Pedido de Reserva</h2>
 
         <div class="sim-grid">
           <div>
@@ -175,7 +175,7 @@
           <div class="row"><span>Crianças 0–4</span><span>Gratuito</span></div>
           <div class="row"><span>Pequeno-almoço</span><span>Incluído</span></div>
           <div class="row" style="border-top:1px dashed #e5e7eb;padding-top:8px;margin-top:8px">
-            <span class="grand">Total estimado</span>
+            <span class="grand">Total</span>
             <span class="grand" id="bk-total">0 €</span>
           </div>
           <p id="sim-msg" class="warn" hidden></p>
@@ -190,7 +190,7 @@
             <input id="consent-privacy" type="checkbox" required>
             <span>Li e aceito a <a href="/politica-privacidade/" target="_blank" rel="noopener">Política de Privacidade</a>.</span>
           </label>
-          <button id="sim-reservar" type="button" class="btn primary">Reservar agora</button>
+          <button id="sim-reservar" type="button" class="btn primary">Enviar Pedido de Reserva</button>
         </div>
       </section>
 
