Update index.html reserva

--- a/reservas/index.html
+++ b/reservas/index.html
@@ -97,11 +97,11 @@
 
   <main class="section">
     <div class="container">
-      <h1 style="text-align:center">Pedido de Reserva</h1>
+      <h1 style="text-align:center">Reservas</h1>
       <p style="text-align:center">Use o simulador para verificar o valor e enviar-nos o pedido.</p>
 
       <section id="simulador-precos" class="simulador" aria-labelledby="sim-title">
-        <h2 id="sim-title" style="margin-top:0">Pedido de Reserva</h2>
+        <h2 id="sim-title" style="margin-top:0">Reserva</h2>
 
         <div class="sim-grid">
           <div>
@@ -190,7 +190,7 @@
             <input id="consent-privacy" type="checkbox" required>
             <span>Li e aceito a <a href="/politica-privacidade/" target="_blank" rel="noopener">Política de Privacidade</a>.</span>
           </label>
-          <button id="sim-reservar" type="button" class="btn primary">Enviar Pedido de Reserva</button>
+          <button id="sim-reservar" type="button" class="btn primary">Reserve já</button>
         </div>
       </section>
 
