Update index.html Enviar pedido

--- a/reservas/index.html
+++ b/reservas/index.html
@@ -188,7 +188,7 @@
             <input id="consent-privacy" type="checkbox" required>
             <span>Li e aceito a <a href="/politica-privacidade/" target="_blank" rel="noopener">Política de Privacidade</a>.</span>
           </label>
-          <button id="sim-reservar" type="button" class="btn primary">Reserve já</button>
+          <button id="sim-reservar" type="button" class="btn primary">Enviar Pedido</button>
         </div>
       </section>
 
