Update index.html tentativa 0

--- a/sobre/index.html
+++ b/sobre/index.html
@@ -61,9 +61,9 @@
 
   <!-- Conteúdo -->
   <main class="section">
-   <div class="container" style="max-width:800px; text-align:justify;">
+   <div class="container" style="max-width:800px; text-align:center;">
       <h1>Sobre a Quinta dos Avós Lourenço</h1>
-
+<div class="container" style="max-width:800px; text-align:justify;">
     <p>
             Entre montanhas e colinas verdes do concelho da Sertã, no coração de Portugal, 
             ergue-se a <strong>Quinta dos Avós Lourenço</strong> — uma casa com mais de um século e meio de história. 
